# Weaver-Desktop

./: .gitignore  .gitmodules  BUSINESS_STRATEGY.md  Cargo.toml  LICENSE  PROPOSAL.md  README.md  STRATEGIC_ANALYSIS.md  deploy_test.sh  old_widget_str.rs
.github/: copilot-instructions.md
ai_scripts/: AI_PAIR_PARTNER_PROMPT.md  README.md  documentation_consistency.md  sbc_optimization_review.md
ai_tasks/: README.md  documentation_consistency.md  sbc_optimization_review.md
assets/icons/: README.md
crates/weaver/: Cargo.toml
crates/weaver/src/: lib.rs
crates/weaver_desktop_shell/: Cargo.toml
crates/weaver_desktop_shell/src/: commands.rs  lib.rs
crates/weaver_desktop_shell/src/components/: background.rs  bar.rs  bottom_bar.rs  desktop_shell.rs  icon_button.rs  image_surface.rs  log_panel.rs  mod.rs  modal.rs  terminal_panel.rs  top_bar.rs  top_menu.rs  widget.rs
crates/weaver_desktop_shell/src/views/: home.rs  mod.rs
crates/weaver_lib/: Cargo.toml
crates/weaver_lib/src/: lib.rs
crates/weaver_lib/src/commands/: bus.rs  mod.rs
crates/weaver_lib/src/components/: interactable.rs  mod.rs
crates/weaver_lib/src/icons/: mod.rs  theme.rs
crates/weaver_lib/src/reactive/: observable.rs
crates/weaver_lib/src/services/: time.rs
crates/weaver_lib/src/theme/: mod.rs
crates/weaver_lib/src/traits/: component.rs
docs/: ARCHITECTURE_ROADMAP.md  BUSINESS_STRATEGY.md  DESKTOP_COMPONENTS.md  GO_TO_MARKET_STRATEGY.md  INDUSTRIAL_ROADMAP.md  MULTI_TARGET_ARCHITECTURE.md  OVERVIEW.md  PROPOSAL.md  STRATEGIC_ANALYSIS.md  THEME_ARCHITECTURE.md  TODO.md  UI_FABRIC_PROPOSAL.md  USE_CASES.md  WIDGET_REFACTORING_DESIGN.md
docs/schemas/: fabric-protocol.schema.json
forks/: README.md
framework/: Cargo.toml
framework/src/: lib.rs
framework/src/commands/: task.rs  (+1 more)
src/: app.rs  commands.rs  main.rs
src/components/: mod.rs  modal.rs  overlay.rs
src/framework/: component.rs  component_manager.rs  event.rs  mod.rs
src/services/: mod.rs
src/system_operations/: mod.rs
src/views/: bottom_panel.rs  calendar.rs  home.rs  menu.rs  mod.rs  top_panel.rs
temporals/: DOCUMENTATION_CONSISTENCY_REPORT.md  LAYERING_NOTES.md  shell_layout_refactor.md
(+30 files in other folders)
