[package]
name = "SystemWeaver"
version = "0.1.0"
edition = "2024"

[dependencies]
weaver = { path = "framework" }
egui = "0.33.2"
eframe = { version = "0.33.2", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
egui-toast = { path = "forks/egui-toast" }
chrono = "0.4"
arrayvec = "0.7"  # Stack-allocated strings/vectors for zero-heap formatting
# egui_mobius = "0.3.0-alpha.32"  # Commented out for now - alpha stability concerns and lower egui.rs version
