[package]
name = "weaver_desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
weaver = { path = "crates/weaver" }
weaver_desktop_shell = { path = "crates/weaver_desktop_shell" }
egui = "0.33.2"
eframe = { version = "0.33.2", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
chrono = "0.4"
# egui_mobius = "0.3.0-alpha.32"  # Commented out for now - alpha stability concerns and lower egui.rs version
