[package]
name = "weaver_lib"
version = "0.1.0"
edition = "2024"
description = "UI framework abstractions for Weaver Desktop"

[dependencies]
egui = "0.33.2"
chrono = "0.4"
arrayvec = "0.7" # Stack-allocated strings/vectors for zero-heap formatting
egui-toast = { path = "../../forks/egui-toast" }
egui_term = { git = "https://github.com/Harzu/egui_term.git" } # Terminal emulator (alacritty backend)
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
] } # Image loading for background
